--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
     "express": "^4.17.1",
     "express-handlebars": "^5.3.4",
     "express-session": "^1.17.2",
+    "express-session-sequelize": "^2.3.0",
     "handlebars": "^4.7.7",
     "mysql2": "^2.3.2",
-    "sequelize": "^6.8.0",
+    "sequelize": "^6.9.0",
     "session": "^0.1.0"
   },
   "devDependencies": {
